@@ -1,0 +1,79 @@
+$date
+	Tue Sep 10 16:34:40 2024
+
+$end
+$version
+	fstWriter
+$end
+$timescale
+	1ps
+$end
+$scope module TOP $end
+$scope module t $end
+$var event 1 ! ev_test $end
+$var int 32 " i [31:0] $end
+$var bit 1 # toggle $end
+$var bit 1 $ clk $end
+$upscope $end
+$upscope $end
+$enddefinitions $end
+#0
+$dumpvars
+0$
+0#
+b00000000000000000000000000000000 "
+$end
+#10
+b00000000000000000000000000000001 "
+1$
+#20
+0$
+#30
+1$
+b00000000000000000000000000000010 "
+#40
+0$
+#50
+1$
+b00000000000000000000000000000011 "
+#60
+0$
+#70
+1$
+b00000000000000000000000000000100 "
+#80
+0$
+#90
+1$
+b00000000000000000000000000000101 "
+#100
+0$
+#110
+1$
+b00000000000000000000000000000110 "
+1#
+1!
+#120
+0$
+#130
+1$
+b00000000000000000000000000000111 "
+#140
+0$
+#150
+1$
+b00000000000000000000000000001000 "
+#160
+0$
+#170
+1$
+b00000000000000000000000000001001 "
+#180
+0$
+#190
+1$
+b00000000000000000000000000001010 "
+#200
+0$
+#210
+1$
